# simpleVCPKGCMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui_main.cpp  main.cpp  vcpkg.json
tests/: CMakeLists.txt  test_symengine.cpp
